--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <p>Welcome to my personal profile page where you can explore various aspects of my life and interests. On this website, you will find detailed information about me, my favorite activities, and some of my proudest achievements.</p>
             <p>Navigate through the sections to learn more about my goals, the things I love, and what I aspire to achieve in the future. This space is a reflection of my journey and passions, and I hope you find it insightful and inspiring.</p>
             <div class="gallery">
-			   <a target="_blank" href="ar/a1.jpg">
-				<img src="ar/a1.jpg" alt="Description of image 1"> </a>
-               <a target="_blank" href="ar/a2.jpg">
-				<img src="ar/a2.jpg" alt="Description of image 2"> </a>
-               <a target="_blank" href="ar/a3.jpg">
-				<img src="ar/a3.jpg" alt="Description of image 3"> </a>
-               <a target="_blank" href="ar/a4.jpg">
-				<img src="ar/a4.jpg" alt="Description of image 4"> </a>
+			   <a target="_blank" href="a1.jpg">
+				<img src="a1.jpg" alt="Description of image 1"> </a>
+               <a target="_blank" href="a2.jpg">
+				<img src="a2.jpg" alt="Description of image 2"> </a>
+               <a target="_blank" href="a3.jpg">
+				<img src="a3.jpg" alt="Description of image 3"> </a>
+               <a target="_blank" href="a4.jpg">
+				<img src="a4.jpg" alt="Description of image 4"> </a>
             </div>
                <a href="about.html"><button class="welcome-button">Visit about Me</button></a>
         </div>
